# slm-mcp-hub

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  package.json  pyproject.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  GETTING-STARTED.md  MIGRATION-GUIDE.md
scripts/: postinstall.js
src/slm_mcp_hub/: __init__.py
src/slm_mcp_hub/cli/: main.py  setup_commands.py
src/slm_mcp_hub/core/: config.py  constants.py  hub.py  registry.py
src/slm_mcp_hub/discovery/: __init__.py  auto_register.py  client_detector.py  network.py
src/slm_mcp_hub/federation/: connection.py  manager.py  namespace.py  router.py
src/slm_mcp_hub/intelligence/: cache.py  cost.py  filtering.py  learning.py  lifecycle.py
src/slm_mcp_hub/observability/: metrics.py  tracer.py
src/slm_mcp_hub/plugins/: base.py  mesh_plugin.py  slm_plugin.py
src/slm_mcp_hub/resilience/: watchdog.py
src/slm_mcp_hub/security/: audit.py  permissions.py
src/slm_mcp_hub/server/: http_server.py  mcp_endpoint.py  proxy_endpoint.py
src/slm_mcp_hub/session/: coordination.py  manager.py
src/slm_mcp_hub/storage/: database.py  schema.py
tests/: test_audit_fixes.py  test_cli.py  test_connection_async.py  test_connection_manager.py  test_phase0_foundation.py  test_phase1_federation.py  test_phase2_sessions.py  test_phase3_intelligence.py  test_phase4_security_resilience_obs.py  test_phase5_discovery.py  test_phase6_plugins.py
