[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-mcp-hub"
version = "0.1.2"
description = "The world's first MCP gateway that learns — intelligent federation, caching, cost tracking, and coordination for Model Context Protocol servers."
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "Varun Pratap Bhardwaj", email = "varun@qualixar.com"},
]
keywords = ["mcp", "model-context-protocol", "gateway", "proxy", "ai-tools", "slm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "click>=8.1.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
network = ["zeroconf>=0.131.0"]
slm = ["superlocalmemory>=3.4.0"]
mesh = ["superlocalmemory>=3.4.0"]
full = ["superlocalmemory>=3.4.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[project.scripts]
slm-hub = "slm_mcp_hub.cli.main:main"

[project.urls]
Homepage = "https://qualixar.com/slm-mcp-hub"
Repository = "https://github.com/qualixar/slm-mcp-hub"
Documentation = "https://qualixar.com/docs/slm-mcp-hub"

[project.entry-points."slm_mcp_hub.plugins"]
slm = "slm_mcp_hub.plugins.slm_plugin:SLMPlugin"
mesh = "slm_mcp_hub.plugins.mesh_plugin:MeshPlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["slm_mcp_hub"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 100
